src/objects/ADvendio__AdServer_customization__c.object
<CustomObject>
    <description>This object contains all necessary Information for the Adserver integration.</description>
    <fields>
        <fullName>ADvendio__ADTECH_Booking_type__c</fullName>
        <description>Choose the ADTECH booking type, depending on the pre-defined billing category and campaign type, which should be chosen in the ad server.</description>
        <inlineHelpText>Choose the ADTECH booking type, depending on the pre-defined billing category and campaign type, which should be chosen in the ad server.</inlineHelpText>
        <label>ADTECH Booking type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__ADTECH_Campaign_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Impression based</fullName>
                </value>
                <value>
                    <fullName>View based</fullName>
                </value>
                <value>
                    <fullName>Click based</fullName>
                </value>
                <value>
                    <fullName>Flat fee</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ADTECH_Campaign_type__c</fullName>
        <description>Choose the ADTECH campaign type to which these settings are to be applied.</description>
        <inlineHelpText>Choose the ADTECH campaign type to which these settings are to be applied.</inlineHelpText>
        <label>ADTECH Campaign type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Guaranteed</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Roadblock</fullName>
                </value>
                <value>
                    <fullName>ShareOfVoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ADTECH_Daily_Distribution__c</fullName>
        <description>Choose the ADTECH daily distribution, depending on the pre-defined billing type and campaign type, which should be chosen in the ad server.</description>
        <inlineHelpText>Choose the ADTECH daily distribution, depending on the pre-defined billing type and campaign type, which should be chosen in the ad server.</inlineHelpText>
        <label>ADTECH Daily Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__ADTECH_Booking_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>as fast as possible</fullName>
                </value>
                <value>
                    <fullName>even (open)</fullName>
                </value>
                <value>
                    <fullName>even (clicks)</fullName>
                </value>
                <value>
                    <fullName>even (guaranteed)</fullName>
                </value>
                <value>
                    <fullName>flat fee</fullName>
                </value>
                <value>
                    <fullName>percentage delivery</fullName>
                </value>
                <value>
                    <fullName>bell curve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ADTECH_Timeframe_Distribution__c</fullName>
        <description>Choose the ADTECH timeframe distribution, depending on the pre-defined billing type and campaign type, which should be chosen in the ad server.</description>
        <inlineHelpText>Choose the ADTECH timeframe distribution, depending on the pre-defined billing type and campaign type, which should be chosen in the ad server.</inlineHelpText>
        <label>ADTECH Timeframe Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__ADTECH_Daily_Distribution__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>as fast as possible</fullName>
                </value>
                <value>
                    <fullName>as fast as possible (views)</fullName>
                </value>
                <value>
                    <fullName>as fast as possible (clicks)</fullName>
                </value>
                <value>
                    <fullName>even</fullName>
                </value>
                <value>
                    <fullName>even (front-loaded)</fullName>
                </value>
                <value>
                    <fullName>even (views/front-loaded)</fullName>
                </value>
                <value>
                    <fullName>even (views)</fullName>
                </value>
                <value>
                    <fullName>even (clicks/front-loaded)</fullName>
                </value>
                <value>
                    <fullName>even (clicks)</fullName>
                </value>
                <value>
                    <fullName>flat fee</fullName>
                </value>
                <value>
                    <fullName>percentage</fullName>
                </value>
                <value>
                    <fullName>weekday optimized</fullName>
                </value>
                <value>
                    <fullName>weekday optimized (front-loaded)</fullName>
                </value>
                <value>
                    <fullName>weekday optimized (views)</fullName>
                </value>
                <value>
                    <fullName>weekday optimized (views/front-loaded)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Login__c</fullName>
        <description>This field displays the assigned ad server login.</description>
        <inlineHelpText>This field displays the assigned ad server login.</inlineHelpText>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>AdServer customizations</relationshipLabel>
        <relationshipName>AdServer_customizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Billing_Category__c</fullName>
        <description>Choose the billing category to which these settings shall be applied in the ad server.</description>
        <inlineHelpText>Choose the billing category to which these settings shall be applied in the ad server.</inlineHelpText>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
                <value>
                    <fullName>CPMo</fullName>
                </value>
                <value>
                    <fullName>CPY</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPx</fullName>
                </value>
                <value>
                    <fullName>CPMSec</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>allin</fullName>
                </value>
                <value>
                    <fullName>edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AdServer customization</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASC-{00000}</displayFormat>
        <label>AdServer customization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdServer customizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>